sensord (0.7.0) unstable; urgency=low

  [Pia Niemela]
  * Added setDataRangeIndex utility for easier range swapping
  * Fixed MOBILITY-2535
  * Fixed NB#223439

  [Lihan Guo]
  * Fixed coverity defects
  * Improved sensorfw examples
  * Changed DbusEmitter to DataEmitter
  * Changed emitToDbus to emitData
  * Added test application to create multiple sensors.

  [Antti Virtanen]
  * Removed possibility of having multiple sensors inside single DeviceAdaptor. This feature was never used.
  * DeviceAdaptor::init() added. Subclasses can implement this to initialize themselves.
  * SysfsAdaptor and InputDevAdaptor init() implemented. They try to find adaptor configuration from section which is named after the adaptor type. Both also add bunch of new configuration options.
  * Removed hardcoded metadata definitions from adaptors. This will now come from config file.
  * Renamed all configuration file entries.
  * Removed logic from Loader to handle deviceId based hierarchy. This is replaced by having different config file for each device type.
  * New option added: --config-dir.
  * Added upstart job definition.
  * Changed init script to use correct config for ncdk.
  * Fixed makefiles to copy correct config files.
  * Modified unit tests to use different configs in different deployments.
  * Added support for NCDK driver to ALSAdaptor.
  * New helper functions to SysfsAdaptor for sysfs access.
  * Fix bug from SysfsAdaptor::writeToFile(): size for given buffer was wrong.
  * Removed FilterProperty: it had possible memory leak and could return references to already deleted memory.
  * AccelerometerChain transformation matrix is now instance specific.
  * Changed buffersizes to 1.
  * Removed ugly optimization from RingBuffer.
  * Merged back pipe to SensorManager to delegate socket writing to Qt eventloop thread. Fixes: NB#227398, NB#227034, NB#229068.
  * Since SocketHandler is used only by Qt eventloop unnecessary mutexes are removed.